tests/derive_ui/multiple_external_subcommand.stderr
error: Only one variant can be marked with `external_subcommand`, this is the second
  --> tests/derive_ui/multiple_external_subcommand.rs:14:15
   |
14 |     #[command(external_subcommand)]
   |               ^^^^^^^^^^^^^^^^^^^
